# jolt-ai-assistant

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: academic-writer.md  jolt-toolkit-dev.md  literature-reviewer.md  param-identifier.md  pdf-report-auditor.md  project-architect.md  project-health-steward.md  regen-analysis.md  report-finetuner.md  simulation.md
.claude/architecture/: DECISIONS.md  plan_v310_platform_slim.md  plan_v320_workspace_form.md
.claude/audits/pdf_reports/: LESSONS.md  README.md  audit_20260626.md
.claude/commands/: check-doc-sync.md  translate-doc.md
.claude/health_checks/: LESSONS.md  README.md  check_20260619.md  check_20260706.md
.claude/hooks/: check-changelog.sh  check-readme-on-version-bump.sh  check-root-readme-on-new-files.sh
.claude/rules/: code-style.md  git-workflow.md  housekeeping.md  naming.md  presentation-style.md  skill-design.md
.claude/scripts/: check_skill_registry.py  check_subproject_independence.py
.claude/skills/data-collection-monitor/: PIPELINE.md  README.md  SKILL.md  build_digest_pdf.py  manifest.yaml  run_monitor.py  watched_vehicles.json
.claude/skills/data-collection-monitor/evaluations/: README.md
.claude/skills/generate-data-dashboard/: PIPELINE.md  README.md  SKILL.md  manifest.yaml
.claude/skills/generate-excel-report/: PIPELINE.md  README.md  SKILL.md  batch_generate.py  generate_report.py  manifest.yaml  patch_graphs_2_2_3.py  test_data_config.json
.claude/skills/generate-pdf-report/: PIPELINE.md  README.md  SKILL.md  briefing_vehicle_specs.json  build_pdf.py  generate_pdf_report.py  manifest.yaml
.claude/skills/html-artifacts/: SKILL.md
.claude/skills/param-tuner/: PIPELINE.md  README.md  SKILL.md  manifest.yaml
.claude/skills/param-tuner/references/: AV24LXJ.md  (+15 more)
.claude/skills/plot-figure/: PIPELINE.md  README.md  SKILL.md  manifest.yaml
.claude/skills/project-qa/: PIPELINE.md  README.md  SKILL.md  manifest.yaml
.claude/skills/report-finetuner/: PIPELINE.md  README.md  SKILL.md  manifest.yaml
.claude/skills/report-visuals/: README.md  SKILL.md  manifest.yaml
.claude/skills/vehicle-onboarding/: PIPELINE.md  README.md  SKILL.md  manifest.yaml
changelogs/: changelog_20260303_20260309.md  changelog_20260310_20260316.md  changelog_20260317_20260323.md  changelog_20260324_20260330.md  changelog_20260331_20260406.md  changelog_20260407_20260413.md  changelog_20260414_20260420.md  changelog_20260421_20260427.md  changelog_20260511_20260517.md  changelog_20260518_20260524.md  changelog_20260525_20260531.md  changelog_20260601_20260607.md  changelog_20260608_20260614.md  changelog_20260615_20260621.md  changelog_20260622_20260628.md  changelog_20260629_20260705.md  changelog_20260706_20260712.md  changelog_20260713_20260719.md  changelog_20260720_20260726.md
chatbot/: README.md  bridge.py  build_kb.py  index.html  start.cmd  start.ps1
chatbot/assets/: app.js  styles.css
chatbot/data/: fleet_kb.js  fleet_kb.json
data_analysis_workspace/shared/: README.md  batch_weather_patch.py  generate_figures.py
pdf_report_workspace/: README.md  build_pdf_report_status.py  pdf_report_status.md
pending_issues/: 001_xlsx_regen_propulsion_undercounted.md  002_wu70glv_srf_wjf_misattribution.md  003_route_based_ep_analysis_deferred.md  004_pooled_capacity_estimator_deferred.md  005_english_comment_pass_generator_scripts.md  README.md
research_projects/: README.md
research_projects/parameter_identify/code/: __init__.py  __main__.py  config.py  data_loader.py  identification.py  preprocessing.py  run_identification.py  test_identification.py  visualization.py
research_projects/regen_analysis/: config.json  report.md
research_projects/regen_analysis/scripts/: 01_data_explore.py  02_find_windows.py  03_energy_model.py  04_regen_analysis.py  05_full_analysis.py  run_all.py
research_projects/simulation/: README.md  run_all.py
research_projects/simulation/experiments/: exp1_mass.py  exp2_wind.py  exp3_temperature.py  exp4_road_surface.py  exp5_elevation.py  exp6_speed_profile_n5.py  exp6_stop_start.py  exp7_cda.py  exp8_ep_vs_mass_factors.py  exp9_distance_correction.py  exp_ep_vs_mass_new.py  exp_heatmaps.py  exp_non_cruise.py  exp_noncruise_profile.py
research_projects/simulation/models/: vehicle_physics.py
src/jolt_toolkit/: DEPLOYMENT.md  README.md  __init__.py  requirements.txt  versions.md
src/jolt_toolkit/analysis/: __init__.py  counters.py  physics.py  stats.py
src/jolt_toolkit/configs/: __init__.py  pipelines.json  plot_config.json  vehicles.json
src/jolt_toolkit/deprecated/: data_processor.py  data_processor_registry.py  excel_writer.py  schema.py
src/jolt_toolkit/report_generator/: __init__.py  _generator.py  bootstrap.py  capacity.py  capacity_backfill.py  charger_patcher.py  charts.py  cli.py  columns.py  data_class.py  data_dashboard.py  data_dashboard_detail.py  data_fetcher.py  diesel_pipeline.py  excel_writer.py  finetune.py  general_pipeline.py  html_viewer.py  logger_patcher.py  operators.py  paths.py  pedal_histogram.py  recompute_v227.py  report_builder.py  rerender_inspect.py  row_builder.py  segment_algorithms.py  validation_generator.py  weather_patch.py  weather_patcher.py  xlsx_patch_common.py
src/jolt_toolkit/scripts/: __init__.py  backfill_propulsion_energy.py  patch_ep_exclude_aux.py  recompute_from_cache.py  refresh_inspect_html.py
src/jolt_toolkit/vehicle_params_identificator/: __init__.py  __main__.py  config.py  data_loader.py  identification.py  preprocessing.py  run_identification.py  test_identification.py  visualization.py
tests/: test_cli.py  test_column_contracts.py  test_configs.py  test_general_pipeline.py  test_imports.py
(+106 files in other folders)
