# Tool configuration only. Since v3.2.0 jolt_toolkit is a vendored code
# workspace, NOT an installable package: there is no build-system / [project]
# table, no wheel, and no console script. Runtime dependencies live in
# src/jolt_toolkit/requirements.txt (so they travel with the vendored folder),
# the package version in src/jolt_toolkit/__init__.py, and the version history
# in src/jolt_toolkit/versions.md. `pip install .` here intentionally fails —
# put src/ on the import path (PYTHONPATH=src or a site-packages .pth) instead.

[tool.pytest.ini_options]
# Put the src-layout package on sys.path for the test session (pytest >=7 built-in
# rootdir-relative prepend) so `pytest` from the repo root works without any
# install or exported PYTHONPATH.
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
# "black" profile keeps isort's import ordering compatible with black's
# formatting (trailing commas, parenthesised multi-line imports) so the two
# tools do not fight. Three groups: stdlib / third-party / first-party.
profile = "black"
